sync better more fixed version of cluster tester

--- a/anti_affinity_test_deployment_yamls/hpa-trigger.yaml
+++ b/anti_affinity_test_deployment_yamls/hpa-trigger.yaml
@@ -1,15 +1,15 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: zone-spread-hpa
+  name: test-hpa
   namespace: test-ns
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: zone-spread-example
+    name: dependent-app
   minReplicas: 1
-  maxReplicas: 6
+  maxReplicas: 4
   metrics:
   - type: Resource
     resource:
